--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
                     </h5>
                 </div>
             </div>
+            <div class="w3-container w3-card w3-white w3-margin-bottom">
+                <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Resume</h2>
+                <div class="w3-container">
+                    <h5 class="w3-opacity"><a href="https://betisb.github.io/Resume/Resume.pdf">Link</a>
+                    </h5>
+                </div>
+            </div>
 
             <div class="w3-container w3-card w3-white w3-margin-bottom">
                 <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Bio</h2>
