--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>LAB Birthday:</strong> <span>3 Jan 2025</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>LAB Birthday:</strong> <span>Jan 3rd 2025</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.betisbaheri.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>New York, USA</span></li>
