--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>LAB Birthday:</strong> <span>Jan 3rd 2025</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.betisbaheri.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1-800-388-7123</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Location:</strong> <span>New York, USA</span></li>
                 </ul>
               </div>
@@ -110,7 +110,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong></strong> <span></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong></strong> <span></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>baherib at canton dot edu</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>baherib [at] canton [dot] edu</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Open Position:</strong> <span>Available</span></li>
                 </ul>
               </div>
