--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
+                  <p>+1-800-388-7123</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -107,7 +107,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>info@canton.edu</p>
+                  <p>baherib [at] canton [dot] edu</p>
                 </div>
               </div><!-- End Info Item -->
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2840.7119776463055!2d-75.18819662328303!3d44.602916090490524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cccf644df425a37%3A0x1b411d8f4e1ed408!2sSUNY%20Canton!5e0!3m2!1sen!2sus!4v1750446443969!5m2!1sen!2sus" frameborder="0" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
