Add favicon link to site name in index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">QSL</h1>
+        <h1 class="sitename"><link rel="shortcut icon" type="image/x-icon" href="assets/img/QSL-logo.png" />QSL</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
